<resources>
    <string name="app_name">S-Blox</string>
    <string name="text_timeline">Conversations</string>
    <string name="text_meet">Meetings</string>
    <string name="text_Contacts">Contacts</string>
    <string name="text_Categories">Groups</string>
    <string name="text_Settings">Settings</string>
    <string name="contact_name_text">Name</string>
    <string name="contact_email_text">Email</string>
    <string name="contact_phone_text">Phone</string>
    <string name="contact_chat_text">Chat</string>
    <string name="contact_meet_text">Meet</string>
    <string name="meet_now">Meet now</string>
    <string name="join_meet">Join meet</string>
    <string name="scedual_meet">Schedule</string>
    <string name="development">Development</string>
    <string name="sblox">S-Blox(Business)</string>
    <string name="s_blox">S-Blox</string>
    <string name="google_contacts">Google Contacts</string>
    <string name="add_category">Add Category</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="COMPLETE">COMPLETE</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
