<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_timeline"
        android:enabled="true"
        android:icon="@drawable/stateful_tabbar_timeline"
        android:title="@string/text_timeline"
        app:showAsAction="always"
        android:visible="true" />
    <item
        android:id="@+id/action_meet"
        android:enabled="true"
        android:icon="@drawable/stateful_tabbar_meet"
        android:title="@string/text_meet"
        app:showAsAction="always"
        android:visible="true" />
    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@drawable/stateful_tabbar_contacts"
        android:title="@string/text_Contacts"
        app:showAsAction="always"
        android:visible="true" />
    <item
        android:id="@+id/action_categories"
        android:enabled="true"
        android:icon="@drawable/stateful_tabbar_categories"
        android:title="@string/text_Categories"
        app:showAsAction="always"
        android:visible="true" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/stateful_tabbar_profile"
        android:title="@string/text_Settings"
        app:showAsAction="always"
        android:visible="true" />
</menu>